fix python3.0 grammer

--- a/02-python-essentials/02.04-strings.ipynb
+++ b/02-python-essentials/02.04-strings.ipynb
@@ -38,7 +38,7 @@
    ],
    "source": [
     "s = \"hello, world\"\n",
-    "print s"
+    "print(s)"
    ]
   },
   {
@@ -58,7 +58,7 @@
    ],
    "source": [
     "s = 'hello world'\n",
-    "print s"
+    "print(s)"
    ]
   },
   {
@@ -410,9 +410,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-02-24T09:33:55.916908Z",
+     "start_time": "2024-02-24T09:33:55.846957Z"
+    }
    },
    "outputs": [
     {
@@ -426,8 +430,8 @@
    ],
    "source": [
     "s = \"HELLO WORLD\"\n",
-    "print s.lower()\n",
-    "print s"
+    "print(s.lower())\n",
+    "print(s)"
    ]
   },
   {
@@ -450,20 +454,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-02-24T09:34:45.977677Z",
+     "start_time": "2024-02-24T09:34:45.941546Z"
+    }
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'hello world'"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello world\n",
+      "hello world   \n",
+      "  hello world\n"
+     ]
     }
    ],
    "source": [
@@ -683,7 +690,7 @@
    "source": [
     "a = \"\"\"hello world.\n",
     "it is a nice day.\"\"\"\n",
-    "print a"
+    "print(a)"
    ]
   },
   {
@@ -1284,9 +1291,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "name": "python3",
    "language": "python",
-   "name": "python2"
+   "display_name": "Python 3 (ipykernel)"
   },
   "language_info": {
    "codemirror_mode": {
