--- a/12-pandas/12.01-ten-minutes-to-pandas.ipynb
+++ b/12-pandas/12.01-ten-minutes-to-pandas.ipynb
@@ -18,9 +18,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2024-02-24T09:46:15.770940Z",
+     "start_time": "2024-02-24T09:46:11.816693Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -92,7 +96,7 @@
    "source": [
     "s = pd.Series([1,3,5,np.nan,6,8])\n",
     "\n",
-    "print s"
+    "print(s)"
    ]
   },
   {
@@ -110,7 +114,11 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-02-24T09:46:20.536018Z",
+     "start_time": "2024-02-24T09:46:20.450981Z"
+    }
    },
    "outputs": [
     {
@@ -125,8 +133,7 @@
    ],
    "source": [
     "dates = pd.date_range('20130101', periods=6)\n",
-    "\n",
-    "print dates"
+    "print(dates)"
    ]
   },
   {
@@ -138,83 +145,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-02-24T09:48:28.749629Z",
+     "start_time": "2024-02-24T09:48:28.569310Z"
+    }
    },
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>A</th>\n",
-       "      <th>B</th>\n",
-       "      <th>C</th>\n",
-       "      <th>D</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2013-01-01</th>\n",
-       "      <td>-0.605936</td>\n",
-       "      <td>-0.861658</td>\n",
-       "      <td>-1.001924</td>\n",
-       "      <td>1.528584</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013-01-02</th>\n",
-       "      <td>-0.165408</td>\n",
-       "      <td>0.388338</td>\n",
-       "      <td>1.187187</td>\n",
-       "      <td>1.819818</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013-01-03</th>\n",
-       "      <td>0.065255</td>\n",
-       "      <td>-1.608074</td>\n",
-       "      <td>-1.282331</td>\n",
-       "      <td>-0.286067</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013-01-04</th>\n",
-       "      <td>1.289305</td>\n",
-       "      <td>0.497115</td>\n",
-       "      <td>-0.225351</td>\n",
-       "      <td>0.040239</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013-01-05</th>\n",
-       "      <td>0.038232</td>\n",
-       "      <td>0.875057</td>\n",
-       "      <td>-0.092526</td>\n",
-       "      <td>0.934432</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013-01-06</th>\n",
-       "      <td>-2.163453</td>\n",
-       "      <td>-0.010279</td>\n",
-       "      <td>1.699886</td>\n",
-       "      <td>1.291653</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                   A         B         C         D\n",
-       "2013-01-01 -0.605936 -0.861658 -1.001924  1.528584\n",
-       "2013-01-02 -0.165408  0.388338  1.187187  1.819818\n",
-       "2013-01-03  0.065255 -1.608074 -1.282331 -0.286067\n",
-       "2013-01-04  1.289305  0.497115 -0.225351  0.040239\n",
-       "2013-01-05  0.038232  0.875057 -0.092526  0.934432\n",
-       "2013-01-06 -2.163453 -0.010279  1.699886  1.291653"
-      ]
+      "text/plain": "                   A         B         C         D\n2013-01-01 -0.794967 -0.616186 -0.054385 -1.254175\n2013-01-02  0.894836  0.148292 -1.901470 -1.151251\n2013-01-03  1.086993 -0.731568 -0.561726 -1.050120\n2013-01-04 -0.253482 -0.932940 -0.686841  0.479835\n2013-01-05  0.090265  1.285584  1.158642  0.432422\n2013-01-06 -0.372683  0.679274  0.177842  2.017110",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>A</th>\n      <th>B</th>\n      <th>C</th>\n      <th>D</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2013-01-01</th>\n      <td>-0.794967</td>\n      <td>-0.616186</td>\n      <td>-0.054385</td>\n      <td>-1.254175</td>\n    </tr>\n    <tr>\n      <th>2013-01-02</th>\n      <td>0.894836</td>\n      <td>0.148292</td>\n      <td>-1.901470</td>\n      <td>-1.151251</td>\n    </tr>\n    <tr>\n      <th>2013-01-03</th>\n      <td>1.086993</td>\n      <td>-0.731568</td>\n      <td>-0.561726</td>\n      <td>-1.050120</td>\n    </tr>\n    <tr>\n      <th>2013-01-04</th>\n      <td>-0.253482</td>\n      <td>-0.932940</td>\n      <td>-0.686841</td>\n      <td>0.479835</td>\n    </tr>\n    <tr>\n      <th>2013-01-05</th>\n      <td>0.090265</td>\n      <td>1.285584</td>\n      <td>1.158642</td>\n      <td>0.432422</td>\n    </tr>\n    <tr>\n      <th>2013-01-06</th>\n      <td>-0.372683</td>\n      <td>0.679274</td>\n      <td>0.177842</td>\n      <td>2.017110</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5683,9 +5628,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "name": "python3",
    "language": "python",
-   "name": "python2"
+   "display_name": "Python 3 (ipykernel)"
   },
   "language_info": {
    "codemirror_mode": {
