--- a/02-python-essentials/02.04-strings.ipynb
+++ b/02-python-essentials/02.04-strings.ipynb
@@ -25,7 +25,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-02-25T01:31:59.034170Z",
+     "start_time": "2024-02-25T01:31:59.004259Z"
+    }
    },
    "outputs": [
     {
@@ -206,7 +210,7 @@
    "source": [
     "line = \"1 2 3 4  5\"\n",
     "numbers = line.split()\n",
-    "print numbers"
+    "print(numbers)"
    ]
   },
   {
@@ -958,18 +962,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-02-25T02:37:30.170992Z",
+     "start_time": "2024-02-25T02:37:30.099157Z"
+    }
    },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "23"
-      ]
+      "text/plain": "23"
      },
-     "execution_count": 28,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1186,24 +1192,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-02-25T02:39:18.690815Z",
+     "start_time": "2024-02-25T02:39:18.643124Z"
+    }
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'blue 10 1.5 foo'"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I love summer\n"
+     ]
     }
    ],
    "source": [
-    "'{color} {0} {x} {1}'.format(10, 'foo', x = 1.5, color='blue')"
+    "'{color} {0} {x} {1}'.format(10, 'foo', x = 1.5, color='blue')\n",
+    "d='summer'\n",
+    "s='I love {}'.format(d)\n",
+    "print(s)"
    ]
   },
   {
