--- a/02-python-essentials/02.06-lists.ipynb
+++ b/02-python-essentials/02.06-lists.ipynb
@@ -18,9 +18,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-02-25T02:55:36.870198Z",
+     "start_time": "2024-02-25T02:55:36.862272Z"
+    }
    },
    "outputs": [
     {
@@ -33,7 +37,7 @@
    ],
    "source": [
     "l = [1, 2.0, 'hello']\n",
-    "print l"
+    "print(l)"
    ]
   },
   {
@@ -119,18 +123,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-02-25T02:55:39.921338Z",
+     "start_time": "2024-02-25T02:55:39.874049Z"
+    }
    },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "3"
-      ]
+      "text/plain": "3"
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,10 +335,10 @@
      "evalue": "'str' object does not support item assignment",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-10-844622ced67a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0ms\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"hello world\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;31m# 把开头的 h 改成大写\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0ms\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'H'\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m: 'str' object does not support item assignment"
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
+      "\u001B[1;32m<ipython-input-10-844622ced67a>\u001B[0m in \u001B[0;36m<module>\u001B[1;34m()\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[0ms\u001B[0m \u001B[1;33m=\u001B[0m \u001B[1;34m\"hello world\"\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      2\u001B[0m \u001B[1;31m# 把开头的 h 改成大写\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m----> 3\u001B[1;33m \u001B[0ms\u001B[0m\u001B[1;33m[\u001B[0m\u001B[1;36m0\u001B[0m\u001B[1;33m]\u001B[0m \u001B[1;33m=\u001B[0m \u001B[1;34m'H'\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m",
+      "\u001B[1;31mTypeError\u001B[0m: 'str' object does not support item assignment"
      ]
     }
    ],
@@ -351,23 +357,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-02-25T13:19:55.304743Z",
+     "start_time": "2024-02-25T13:19:55.113302Z"
+    }
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[100, 11, 12, 13, 14]\n"
+      "[100, 11, 12, 13, 20]\n"
      ]
     }
    ],
    "source": [
     "a = [10, 11, 12, 13, 14]\n",
     "a[0] = 100\n",
-    "print a"
+    "a[-1]=20\n",
+    "print(a)"
    ]
   },
   {
@@ -379,18 +390,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-02-25T13:20:08.342690Z",
+     "start_time": "2024-02-25T13:20:08.138184Z"
+    }
    },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "[100, 1, 2, 13, 14]"
-      ]
+      "text/plain": "[100, 1, 2, 13, 20]"
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +438,7 @@
    "source": [
     "a = [10, 11, 12, 13, 14]\n",
     "a[1:3] = [1, 2, 3, 4]\n",
-    "print a"
+    "print(a)"
    ]
   },
   {
@@ -453,9 +466,9 @@
    ],
    "source": [
     "a = [10, 1, 2, 11, 12]\n",
-    "print a[1:3]\n",
+    "print(a[1:3])\n",
     "a[1:3] = []\n",
-    "print a"
+    "print(a)"
    ]
   },
   {
@@ -509,10 +522,10 @@
      "evalue": "attempt to assign sequence of size 0 to extended slice of size 3",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-16-7b6c4e43a9fa>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0ma\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m: attempt to assign sequence of size 0 to extended slice of size 3"
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mValueError\u001B[0m                                Traceback (most recent call last)",
+      "\u001B[1;32m<ipython-input-16-7b6c4e43a9fa>\u001B[0m in \u001B[0;36m<module>\u001B[1;34m()\u001B[0m\n\u001B[1;32m----> 1\u001B[1;33m \u001B[0ma\u001B[0m\u001B[1;33m[\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;36m2\u001B[0m\u001B[1;33m]\u001B[0m \u001B[1;33m=\u001B[0m \u001B[1;33m[\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m",
+      "\u001B[1;31mValueError\u001B[0m: attempt to assign sequence of size 0 to extended slice of size 3"
      ]
     }
    ],
@@ -555,7 +568,7 @@
    "source": [
     "a = [1002, 'a', 'b', 'c']\n",
     "del a[0]\n",
-    "print a"
+    "print(a)"
    ]
   },
   {
@@ -653,8 +666,8 @@
    ],
    "source": [
     "a = [10, 11, 12, 13, 14]\n",
-    "print 10 in a\n",
-    "print 10 not in a"
+    "print(10 in a)\n",
+    "print(10 not in a)"
    ]
   },
   {
@@ -682,8 +695,8 @@
    ],
    "source": [
     "s = 'hello world'\n",
-    "print 'he' in s\n",
-    "print 'world' not in s"
+    "print('he' in s)\n",
+    "print('world' not in s)"
    ]
   },
   {
@@ -851,10 +864,10 @@
      "evalue": "1 is not in list",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-26-ed16592c2786>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0ma\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m: 1 is not in list"
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mValueError\u001B[0m                                Traceback (most recent call last)",
+      "\u001B[1;32m<ipython-input-26-ed16592c2786>\u001B[0m in \u001B[0;36m<module>\u001B[1;34m()\u001B[0m\n\u001B[1;32m----> 1\u001B[1;33m \u001B[0ma\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mindex\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;36m1\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m",
+      "\u001B[1;31mValueError\u001B[0m: 1 is not in list"
      ]
     }
    ],
@@ -901,7 +914,7 @@
    "source": [
     "a = [10, 11, 12]\n",
     "a.append(11)\n",
-    "print a"
+    "print(a)"
    ]
   },
   {
@@ -928,8 +941,52 @@
    ],
    "source": [
     "a.append([11, 12])\n",
-    "print a"
+    "print(a)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "1\n",
+      "111\n",
+      "2\n",
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99, 100, 101, 2, 3, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = []\n",
+    "for i in range(0,10):\n",
+    "   a.append(i) \n",
+    "print(len(a))\n",
+    "print(a.count(3))\n",
+    "\n",
+    "i=0\n",
+    "while True:\n",
+    "    i=i+1\n",
+    "    a.append(i)\n",
+    "    if i >100:\n",
+    "        break\n",
+    "print(len(a))\n",
+    "print(a.count(3))\n",
+    "\n",
+    "n=[2,3,4]\n",
+    "a=a+n\n",
+    "print(a)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-02-25T13:28:19.400636Z",
+     "start_time": "2024-02-25T13:28:19.361332Z"
+    }
+   },
+   "execution_count": 13
   },
   {
    "cell_type": "markdown",
@@ -963,7 +1020,7 @@
    "source": [
     "a = [10, 11, 12, 11]\n",
     "a.extend([1, 2])\n",
-    "print a"
+    "print(a)"
    ]
   },
   {
@@ -999,7 +1056,7 @@
     "a = [10, 11, 12, 13, 11]\n",
     "# 在索引 3 插入 'a'\n",
     "a.insert(3, 'a')\n",
-    "print a"
+    "print(a)"
    ]
   },
   {
@@ -1226,9 +1283,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "name": "python3",
    "language": "python",
-   "name": "python2"
+   "display_name": "Python 3 (ipykernel)"
   },
   "language_info": {
    "codemirror_mode": {
